typescript/checker/tests/conformance/async/es6/functionDeclarations/asyncFunctionDeclaration1_es6.ts.stderr
error: unimplemented
expand_export_info(Promise)
File: $DIR/tests/conformance/async/es6/functionDeclarations/asyncFunctionDeclaration1_es6.ts
 --> $DIR/tests/conformance/async/es6/functionDeclarations/asyncFunctionDeclaration1_es6.ts:3:1
  |
3 | / async function foo(): Promise<void> {
4 | | }
  | |_^

error: ReturnRequired {
    span: Span {
        lo: BytePos(
            60,
        ),
        hi: BytePos(
            75,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/async/es6/functionDeclarations/asyncFunctionDeclaration1_es6.ts:3:21
  |
3 | async function foo(): Promise<void> {
  |                     ^^^^^^^^^^^^^^^

